# rxcalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rxcalc.pro
linux/: description-pak  rxcalc.desktop  rxcalc.menu  rxcalc.xpm  x-rxcalc-project.desktop  x-rxcalc-project.xml
mac/: rxcalc.icns
resources/: images.qrc
sources/: main.cpp  main.h  rxcalc.cpp  rxcalc.h  rxtable.cpp  rxtable.h  rxtablecell.cpp  rxtablecell.h  solver.cpp  solver.h  stage.cpp  stage.h  system.cpp  system.h
windows/: Thumbs.db  replace.bat  rxcalc.iss
